<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_corners"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/input_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:hint="@string/coordinate_x"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:textColorHint="#000000" />

            <Button
                android:id="@+id/btn_camera_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/input_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:hint="@string/coordinate_y"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:textColorHint="#000000" />

            <Button
                android:id="@+id/btn_camera_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/input_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:hint="@string/height"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:textColorHint="#000000" />

            <Button
                android:id="@+id/btn_camera_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginBottom="16sp"/>
    </LinearLayout>
</RelativeLayout>
